--- a/Home_Page/homePage1/homePage1.css
+++ b/Home_Page/homePage1/homePage1.css
@@ -9,7 +9,7 @@
 }
 html{
 	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow-y: hidden;/**/
 }
 /*
 @font-face{
@@ -18,6 +18,19 @@ html{
 }
 Easter egg, just for fun
 */
+
+#circle {
+	  position: absolute;
+	  top: 7px;
+		right: 30px;
+      width: 10px;
+      height: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      background: #32cd32;
+    }
+
 /*Parte coolnavbar*/
 nav{
 	position: relative;
@@ -94,7 +107,7 @@ h2{
 
 p{
 	font-family: 'Harukaze';
-	font-size: 50px;
+	font-size: 40px;
 }
 
 .showcase {
